--- a/prj.conf
+++ b/prj.conf
@@ -2,17 +2,30 @@
 CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=2
 
-# Enable ZBUS
+# zBUS
 CONFIG_ZBUS=y
 
-# Enable required drivers
+# LED Strip driver
 CONFIG_LED_STRIP=y
+
+# USB driver
 CONFIG_USB_DEVICE_DRIVER=y
 CONFIG_USB_DEVICE_STACK=y
 
+# Flash storage
+CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_NVS=y
+CONFIG_FILE_SYSTEM=y
+CONFIG_MPU_ALLOW_FLASH_WRITE=y
+
 # USB metadata
-CONFIG_USB_DEVICE_MANUFACTURER="taleroangel"
-CONFIG_USB_DEVICE_PRODUCT="ZephyrOS LampArray Example"
+CONFIG_USB_DEVICE_MANUFACTURER="Rodent."
+# RO
+CONFIG_USB_DEVICE_VID=0x524f
+CONFIG_USB_DEVICE_PRODUCT="LampArray Driver"
+# LA
+CONFIG_USB_DEVICE_PID=0x4C41
 
 # Enable USB HID
 CONFIG_USB_DEVICE_HID=y
@@ -20,6 +33,9 @@ CONFIG_USB_HID_DEVICE_NAME="HID"
 CONFIG_USB_HID_DEVICE_COUNT=1
 CONFIG_USB_HID_POLL_INTERVAL_MS=1
 CONFIG_USB_HID_BOOT_PROTOCOL=n
+
+# Self powered device
+CONFIG_USB_SELF_POWERED=n
 
 # Enable rebooting
 CONFIG_REBOOT=y
